--- a/frontend/marketplace/src/categoryNavbar.css
+++ b/frontend/marketplace/src/categoryNavbar.css
@@ -1,13 +1,15 @@
 .sub-nav {
   display: table;
   width: 100%;
+  height: 100%;
 }
 .catNav-links {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 0;
+  padding: 10px 0;
   list-style: none;
+  margin: 0;
 }
 
 .catNav-links li {
@@ -15,5 +17,7 @@
 }
 
 .catNav-links li a {
+  color: #222;
   text-decoration: none;
+  font-size: 14px;
 }
